# pixel-art-gen

./: CMakeLists.txt  image.ppm
archive/: vec3.h
archive/cpp_test/: CMakeLists.txt
cpp_test/: main.cpp
src/: color.h  image_buffer.cpp  image_buffer.h  main.cpp
